<resources>
    <string name="app_name">Mathe1</string>
    <string name="NeueAufgabe">Klicke auf NEU</string>
    <string name="Plus">+</string>
    <string name="Minus">-</string>
    <string name="Mal">*</string>
    <string name="Durch">:</string>
    <string name="Neu">Neu</string>
    <string name="Zahl1" />
    <string name="Zahl2" />
    <string name="Rechenart">Rechenart?</string>
    <string name="Nicht_Gestartet">Zuerst mal Neu drücken!</string>
</resources>
