<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.david_genser.mathe1.MainActivity">

    <TextView
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:text="@string/NeueAufgabe"
        android:textSize="24dp"
        android:id="@+id/textView"
        android:autoText="false"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp"
        android:gravity="center" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/Plus"
        android:id="@+id/button"
        android:textSize="50dp"
        android:layout_marginTop="72dp"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/Minus"
        android:id="@+id/button2"
        android:textSize="50dp"
        android:layout_above="@+id/button3"
        android:layout_toRightOf="@+id/button"
        android:layout_toEndOf="@+id/button" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/Mal"
        android:id="@+id/button3"
        android:textSize="50dp"
        android:layout_below="@+id/button"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/Durch"
        android:id="@+id/button4"
        android:textSize="50dp"
        android:layout_below="@+id/button"
        android:layout_toRightOf="@+id/button"
        android:layout_toEndOf="@+id/button" />

    <Button
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:text="@string/Neu"
        android:id="@+id/button5"
        android:textSize="25dp"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Zahl1"
        android:id="@+id/textView2"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/button4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button5"
        android:gravity="center"
        android:textColor="#f61010"
        android:textStyle="bold"
        android:textSize="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Zahl2"
        android:id="@+id/textView3"
        android:layout_toRightOf="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_alignTop="@+id/textView2"
        android:gravity="center"
        android:textColor="#f61010"
        android:textStyle="bold"
        android:textSize="25dp" />
</RelativeLayout>
